[package]
name = "telegram-bot"
version = "0.9.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>", "Gustavo Aguiar <gustavo.h.o.aguiar@gmail.com>"]
edition = "2021"

description = "A library for creating Telegram bots"

documentation = "https://docs.rs/telegram-bot/"
repository = "https://github.com/telegram-rs/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[features]
openssl = ["hyper-tls"]
rustls = ["rustls-webpki-roots"]
rustls-native-roots = ["dep:hyper-rustls", "hyper-rustls/ring", "hyper-rustls/native-tokio"]
rustls-webpki-roots = ["dep:hyper-rustls", "hyper-rustls/ring", "hyper-rustls/webpki-roots"]
default = ["openssl"]
[dependencies]
bytes = "1.0.1"
tokio = { version = "1.2", features = ["fs", "rt"]}

tracing = "0.1.23"
tracing-futures = "0.2"
multipart = { version = "0.18", default-features = false, features = ["client"] }

telegram-bot-raw = { version = "0.9.0", path = "../raw" }

hyper = { version = "1", features = ["client", "http1"] }
hyper-tls = { version = "0.6", optional = true  }
hyper-util = { version = "0.1.9", features = ["client", "client-legacy", "http1"] }
http-body-util = "0.1.2"
futures = "0.3"
hyper-rustls = { version = "0.27", optional = true, default-features = false, features = ["http1", "tls12"] }
[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.2", features = ["macros", "time", "fs", "rt-multi-thread"] }
